--- a/MCPApp/MCPApp.csproj
+++ b/MCPApp/MCPApp.csproj
@@ -289,6 +289,12 @@
     <Compile Include="WhiteboardDayCommentForm.Designer.cs">
       <DependentUpon>WhiteboardDayCommentForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="WhiteboardEmptyProductsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="WhiteboardEmptyProductsForm.Designer.cs">
+      <DependentUpon>WhiteboardEmptyProductsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="WhiteboardForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -438,6 +444,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="WhiteboardDayCommentForm.resx">
       <DependentUpon>WhiteboardDayCommentForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="WhiteboardEmptyProductsForm.resx">
+      <DependentUpon>WhiteboardEmptyProductsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="WhiteboardForm.resx">
       <DependentUpon>WhiteboardForm.cs</DependentUpon>
