--- a/MCPApp/MCPApp.csproj
+++ b/MCPApp/MCPApp.csproj
@@ -128,6 +128,18 @@
     <Compile Include="DeletedJobsForm.Designer.cs">
       <DependentUpon>DeletedJobsForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="DesignBoardForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DesignBoardForm.Designer.cs">
+      <DependentUpon>DesignBoardForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DesignBoardParametersForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DesignBoardParametersForm.Designer.cs">
+      <DependentUpon>DesignBoardParametersForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="EditCompletedJobDetailForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -387,6 +399,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DeletedJobsForm.resx">
       <DependentUpon>DeletedJobsForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DesignBoardForm.resx">
+      <DependentUpon>DesignBoardForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DesignBoardParametersForm.resx">
+      <DependentUpon>DesignBoardParametersForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="EditCompletedJobDetailForm.resx">
       <DependentUpon>EditCompletedJobDetailForm.cs</DependentUpon>
