--- a/MCPApp/App.config
+++ b/MCPApp/App.config
@@ -1,15 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+  </configSections>
   <connectionStrings>
-<add name="MCPApp.Properties.Settings.MeltonDoncreteDBConnectionString"
-      connectionString="Server=78.137.122.11,64220;Database=MeltonConcreteDB;User Id=user;Password=password;"
+    <add name="MCPApp.Properties.Settings.MeltonDoncreteDBConnectionString"
+      connectionString="Server=78.137.122.11,64220;Database=NewTestMeltonConcreteDB;User Id=sa;Password=mypassword;"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
   <appSettings>
-	<add key="AppVersion" value="15.10.2025.01" />
+	<add key="AppVersion" value="20.10.2025.01" />
     <add key="LoggedInUser" value="" />
     <add key="LoggedInUserFullName" value="" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
