#21NOV2025 - refactored JobPlanner to use SQL views and added safe INT conversion for RGBs

--- a/MCPApp/App.config
+++ b/MCPApp/App.config
@@ -4,7 +4,7 @@
   </configSections>
   <connectionStrings>
     <add name="MCPApp.Properties.Settings.MeltonDoncreteDBConnectionString"
-      connectionString="Server=78.137.122.11,64220;Database=NewTestMeltonConcreteDB;User Id=sa;Password=myPassword;"
+      connectionString="Server=78.137.122.11,64220;Database=MeltonConcreteDB;User Id=sa;Password=mypassword;"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
     <startup> 
