--- a/MCPApp/App.config
+++ b/MCPApp/App.config
@@ -4,14 +4,14 @@
   </configSections>
   <connectionStrings>
     <add name="MCPApp.Properties.Settings.MeltonDoncreteDBConnectionString"
-      connectionString="Server=78.137.122.11,64220;Database=MeltonConcreteDB;User Id=sa;Password=mypassword;"
+      connectionString="Server=78.137.122.11,64220;Database=MeltonConcreteDB;User Id=sa;Password=notmyrealpassword;"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
   <appSettings>
-	<add key="AppVersion" value="23.11.2025.01" />
+	<add key="AppVersion" value="25.11.2025.01" />
     <add key="LoggedInUser" value="" />
     <add key="LoggedInUserFullName" value="" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
